manifests/flightctl-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightctl-ui
  labels:
    app: flightctl-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightctl-ui
  template:
    metadata:
      labels:
        app: flightctl-ui
    spec:
      containers:
        - name: flightctl-ui
          image: 10.200.170.11:5000/flightctl/flightctl-ui:v1.1.0-rc1-40-ge62e7bd53
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flightctl-ui
spec:
  selector:
    app: flightctl-ui
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
